<resources>
    <string name="app_name" translatable="false">MikuBox</string>
    <string name="app_name_long" translatable="false">MikuBox for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme Color</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update" formatted="false">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription" formatted="false">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated" formatted="false">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="password">Password</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="custom_config">Custom Config</string>
    <string name="deduplication">Deduplication</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="subscription_settings">Subscription Settings</string>
    <string name="group_type">Group Type</string>
    <string name="force_resolve">Force Resolve</string>
    <string name="force_resolve_sum">Resolve all domain names to IP addresses when updating. Host
        and SNI will be automatically appended if possible</string>
    <string name="deduplication_sum">Remove duplicate configurations when updating</string>
    <string name="update_settings">Update Settings</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_delay">Auto Update Delay (In minutes)</string>
    <string name="update_when_connected_only">Update only when connected</string>
    <string name="update_when_connected_only_sum">Prevent IP address leakage</string>
    <string name="subscription_user_agent">UserAgent</string>
    <string name="group_order">Order</string>
    <string name="show_bottom_bar">Show bottom bar like SagerNet</string>
    <string name="utls_fingerprint">uTLS fingerprint</string>
    <string name="is_outbound_only">The JSON set is outbound</string>
    <string name="use_selector">Use selector</string>
    <string name="front_proxy">Front proxy</string>
    <string name="landing_proxy">Landing Proxy</string>
    <string name="language">Language</string>
    <string name="fab_style">Floating action button style</string>
    <string name="pref_dynamic_theme_title">Use Dynamic Theme</string>
    <string name="pref_dynamic_theme_summary">Use dynamic colors according to the wallpaper (Material You)</string>
    <string name="update">Update</string>
    <string name="pref_font_bold_title">Use Bold Text</string>
    <string name="pref_font_bold_summary">Display all text using a bold typeface.</string>
    <string name="pref_true_black_title">Use the pitch black theme (AMOLED)</string>
    <string name="pref_true_black_summary">Use a pure black background when night mode is enabled.</string>
    <string name="sound_connect_title">VPN connection sound</string>
    <string name="sound_connect_summary">Play sound when VPN connected or disconnected</string>
    <string name="pref_custom_dpi">Set the application DPI manually</string>
    <string name="pref_custom_dpi_dialog_massage">200-500 (Long press preference to reset DPI to system default)</string>
    <string name="banner_home_title">Show home banner</string>
    <string name="banner_home_summary">Hide or show banner on homepage</string>
    <string name="pref_show_splash_title">Show splash screen</string>
    <string name="pref_show_splash_summary">Show splash screen when application is run</string>
    <string name="ip_info_bottom_bar_title">Check IP on connection test</string>
    <string name="ip_info_bottom_bar_summary">Also show public IP, country, and flag when tapping the bottom bar</string>
    <string name="ip_info_show_ip_in_two_line_summary">Displays IP info results in the second line (above latency) during connection tests</string>
    <string name="ip_info_show_ip_in_two_line_title">Display IP Info in Separate Line</string>
    <string name="theme_category">Theme</string>
    <string name="bottom_bar_category">Bottom bar</string>
    <string name="opsional_category">Opsional</string>
    <string name="category_style_title">Preference category title style</string>
    <string name="show_weather_info">Show weather info</string>
    <string name="show_weather_info_summary">Shows current weather in the greeting text</string>
    <string name="category_weather">Weather</string>
    <string name="weather_manual_mode">Use manual location</string>
    <string name="weather_manual_summary">If enabled, use city name instead of GPS</string>
    <string name="weather_city">City name</string>
    <string name="weather_city_dialog">Enter city name (example: Tokyo, Jakarta, Beijing)</string>
    <string name="show_weather_condition">Show weather condition</string>
    <string name="show_weather_condition_summary">Show prefix text and weather condition description</string>
    <string name="profile_name_custom_title">Header name</string>
    <string name="profile_name_custom_dialog">Change display name</string>
    <string name="cardview_category">Custom preference</string>
    <string name="cardview_icon_title">Icon</string>
    <string name="cardview_icon_summary">Hide icon in preference</string>
    <string name="cardview_summary_title">Summary</string>
    <string name="cardview_summary_summary">Hide summary in preference</string>
    <string name="cardview_arrow_title">Arrow icon</string>
    <string name="cardview_arrow_summary">Hide arrow icon in preference</string>
    <string name="cardview_icon_profile_server_title">Icon profile server</string>
    <string name="cardview_icon_profile_server_summary">Hide icon in profile server</string>
    <string name="banner_home_category">Banner home</string>
    <string name="banner_sheet_category">Banner bottomsheet</string>
    <string name="banner_preference_category">Banner preference</string>
    <string name="banner_custom_sheet_title">Change banner image bottomsheet</string>
    <string name="banner_custom_sheet_summary">Select an image from the gallery for the banner bottomsheet</string>
    <string name="delete_custom_banner_sheet">Delete custom banner bottomsheet</string>
    <string name="delete_custom_banner_sheet_summary">Revert to default banner bottomsheet</string>
    <string name="banner_custom_preference_title">Change banner image preference</string>
    <string name="banner_custom_preference_summary">Select an image from the gallery for the banner preference</string>
    <string name="delete_custom_banner_preference">Delete custom banner preference</string>
    <string name="delete_custom_banner_preference_summary">Revert to default banner preference</string>
    <string name="banner_height_title">Banner height</string>
    <string name="banner_height_summary">Set homepage banner height (in dp). Default: 100</string>
    <string name="banner_custom_title">Change banner image</string>
    <string name="banner_custom_summary">Select an image from the gallery for the homepage banner</string>
    <string name="banner_profile_category">Profile</string>
    <string name="banner_profile_custom_title">Change profile banner</string>
    <string name="banner_profile_custom_summary">Choose a custom image for the profile header</string>
    <string name="delete_custom_banner">Delete custom banner</string>
    <string name="delete_custom_banner_summary">Revert to default banner</string>
    <string name="delete_custom_banner_profile">Delete custom profile banner</string>
    <string name="delete_custom_banner_profile_summary">Revert to default profile banner</string>
    <string name="hide_weather_city">Hide city name</string>
    <string name="hide_weather_city_summary">Hide the city location in weather info</string>
    <string name="update_summary">"Let's update MikuBox master!"</string>
    <string name="uwu_banner_title">master</string>
    <string name="uwu_general_settings_title">General settings</string>
    <string name="uwu_theme_settings_summary">Choose the accent color yourself</string>
</resources>