<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <moe.matsuri.nb4a.ui.CustomBannerPreference
        android:layout="@layout/uwu_banner_theme"
        android:title="@string/update"
        android:summary="@string/update_summary"
        app:icon="@drawable/ic_update"
        app:key="key_check_update" />
    <PreferenceCategory
        app:title="@string/theme_category">
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme"
            app:summary="@string/uwu_theme_settings_summary" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/pref_dynamic_theme_title"
            android:key="dynamic_theme_switch"
            android:summary="@string/pref_dynamic_theme_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:title="@string/pref_true_black_title"
            android:key="true_dark_enabled"
            android:summary="@string/pref_true_black_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/opsional_category">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/pref_font_bold_title"
            android:key="bold_font_switch"
            android:summary="@string/pref_font_bold_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_format_font" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/sound_connect_title"
            android:key="sound_connect"
            android:summary="@string/sound_connect_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="true"
            app:icon="@drawable/ic_audio" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue=""
            app:entries="@array/language_entry"
            app:entryValues="@array/language_value"
            app:icon="@drawable/ic_baseline_translate_24"
            app:isPreferenceVisible="true"
            app:key="app_language"
            app:title="@string/language" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/pref_show_splash_title"
            android:key="show_splash_screen"
            android:summary="@string/pref_show_splash_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="true"
            app:icon="@drawable/ic_toggle_switch" />
        <moe.matsuri.nb4a.ui.DpiEditTextPreference
            android:layout="@layout/uwu_mid"
            android:inputType="number"
            app:defaultValue="0"
            app:dialogMessage="@string/pref_custom_dpi_dialog_massage"
            app:icon="@drawable/ic_cellphone_screenshot"
            app:key="custom_dpi"
            app:title="@string/pref_custom_dpi"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            android:title="@string/category_style_title"
            android:key="key_category_style_menu"
            android:defaultValue="style1"
            app:entries="@array/style_category_entries"
            app:entryValues="@array/style_category_values"
            app:icon="@drawable/ic_shape_outline"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/banner_home_category">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/banner_home_title"
            android:key="show_banner_layout"
            android:summary="@string/banner_home_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="true"
            app:icon="@drawable/ic_toggle_switch" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            android:title="@string/banner_height_title"
            android:key="banner_height"
            android:summary="@string/banner_height_summary"
            android:inputType="number"
            app:defaultValue="100"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_arrow_up_down_bold_outline" />
        <Preference
            android:layout="@layout/uwu_mid"
            android:title="@string/banner_custom_title"
            android:key="action_change_banner_image"
            android:summary="@string/banner_custom_summary"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_image_area" />
        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_banner_image"
            app:summary="@string/delete_custom_banner_summary"
            app:title="@string/delete_custom_banner"
            app:dependency="show_banner_layout"
            app:icon="@drawable/ic_action_delete" />
     </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/banner_sheet_category">
        <Preference
            android:layout="@layout/uwu_top"
            android:title="@string/banner_custom_sheet_title"
            android:key="action_change_sheet_banner_image"
            android:summary="@string/banner_custom_sheet_summary"
            app:icon="@drawable/ic_image_area" />
        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_sheet_banner_image"
            app:summary="@string/delete_custom_banner_sheet_summary"
            app:title="@string/delete_custom_banner_sheet"
            app:icon="@drawable/ic_action_delete" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/banner_preference_category">
        <Preference
            android:layout="@layout/uwu_top"
            android:title="@string/banner_custom_preference_title"
            android:key="action_change_preference_banner_image"
            android:summary="@string/banner_custom_preference_summary"
            app:icon="@drawable/ic_image_area" />
        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_preference_banner_image"
            app:summary="@string/delete_custom_banner_preference_summary"
            app:title="@string/delete_custom_banner_preference"
            app:icon="@drawable/ic_action_delete" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/banner_profile_category">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:defaultValue="@string/uwu_banner_title"
            app:dialogMessage="@string/profile_name_custom_dialog"
            app:icon="@drawable/ic_image_edit"
            app:key="custom_profile_name"
            app:title="@string/profile_name_custom_title" />
        <Preference
            android:layout="@layout/uwu_mid"
            android:title="@string/banner_profile_custom_title"
            android:key="action_change_profile_banner_image"
            android:summary="@string/banner_profile_custom_summary"
            app:icon="@drawable/ic_image_area" />
        <Preference
            android:layout="@layout/uwu_bot"
            app:key="action_delete_profile_banner_image"
            app:summary="@string/delete_custom_banner_profile_summary"
            app:title="@string/delete_custom_banner_profile"
            app:icon="@drawable/ic_action_delete" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/cardview_category">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/cardview_icon_title"
            android:key="uwu_icon"
            android:summary="@string/cardview_icon_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/cardview_icon_profile_server_title"
            android:key="uwu_icon_profile_server"
            android:summary="@string/cardview_icon_profile_server_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch"
            app:key="uwu_summary"
            app:summary="@string/cardview_summary_summary"
            app:title="@string/cardview_summary_title" />
        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch"
            app:key="uwu_arrow"
            app:summary="@string/cardview_arrow_summary"
            app:title="@string/cardview_arrow_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/category_weather">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/show_weather_info"
            android:key="show_weather_info"
            android:summary="@string/show_weather_info_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_weather_cloudy" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:defaultValue="false"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_map_marker_outline"
            app:key="manual_weather_enabled"
            app:summary="@string/weather_manual_summary"
            app:title="@string/weather_manual_mode" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dependency="manual_weather_enabled"
            app:dialogMessage="@string/weather_city_dialog"
            app:icon="@drawable/ic_city"
            app:key="manual_weather_city"
            app:title="@string/weather_city"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:defaultValue="true"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_toggle_switch"
            app:key="show_weather_condition"
            app:summary="@string/show_weather_condition_summary"
            app:title="@string/show_weather_condition" />
        <SwitchPreference
            android:layout="@layout/uwu_bot_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:defaultValue="false"
            app:dependency="show_weather_info"
            app:icon="@drawable/ic_city"
            app:key="hide_weather_city"
            app:summary="@string/hide_weather_city_summary"
            app:title="@string/hide_weather_city" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/bottom_bar_category">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/ic_toggle_switch"
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/ip_info_bottom_bar_title"
            android:key="connection_test_with_ip"
            android:summary="@string/ip_info_bottom_bar_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_ip_info" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/ip_info_show_ip_in_two_line_title"
            android:key="show_ip_in_two_line"
            android:summary="@string/ip_info_show_ip_in_two_line_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:dependency="connection_test_with_ip"
            app:icon="@drawable/ic_toggle_switch" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            app:defaultValue="1"
            app:entries="@array/fab_style_entry"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_service_busy"
            app:key="fab_style"
            app:title="@string/fab_style"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>