<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <moe.matsuri.nb4a.ui.CustomBannerEditTextPreference
        android:layout="@layout/uwu_banner_profile"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    
    <PreferenceCategory
        app:title="@string/proxy_cat">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_settings_password"
            app:key="password"
            app:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/security_settings">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_action_copyright"
            app:key="sni"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="allowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="alpn"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="certificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            app:defaultValue=""
            app:entries="@array/utls_fingerprint_entry"
            app:entryValues="@array/utls_fingerprint_entry"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="utlsFingerprint"
            app:title="@string/utls_fingerprint"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
