<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <moe.matsuri.nb4a.ui.CustomBannerEditTextPreference
        android:layout="@layout/uwu_banner_profile"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    
    <PreferenceCategory
        app:title="@string/uwu_general_settings_title">
        <SwitchPreference
            android:layout="@layout/uwu_top_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/ic_baseline_import_contacts_24"
            app:key="isOutboundOnly"
            app:title="@string/is_outbound_only" />
        <moe.matsuri.nb4a.ui.EditConfigPreference
            android:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="serverConfig"
            app:title="@string/custom_config"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
